--- a/Index.HTML
+++ b/Index.HTML
@@ -6,12 +6,17 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <img class="icon" src="images/my_icon.png" alt="Yunomi_icon">
-  <h1>Matsuura699 / Yunomi_pixel<br>
-    Programming and Pixelart</h1>
-  <h2>Profiles</h2>
+  <div class="main">
+    <img class="icon" src="images/my_icon_traced.png" alt="Yunomi_icon">
+    <div class="name">
+      <h1>Matsuura699 / Yunomi_pixel</h1>
+      <h2>Programming and Pixelart</h2>
+    </div>
+  </div>
+  <h2>Profile</h2>
   <p>Matsuura699 / Yunomi_pixel<br>
     大阪公立大学工業高等専門学校 知能情報コース 所属<br>
+    
   </p>
 </body>
 </html>
