--- a/Index.HTML
+++ b/Index.HTML
@@ -13,10 +13,17 @@
       <h2>Programming and Pixelart</h2>
     </div>
   </div>
-  <h2>Profile</h2>
-  <p>Matsuura699 / Yunomi_pixel<br>
-    大阪公立大学工業高等専門学校 知能情報コース 所属<br>
-    
-  </p>
+  <h3>Profile</h3>
+  <div class="Profile">
+    <p>github name: Matsuura699<br>
+      handle name: Yunomi_pixel<br>
+      School 　　: 大阪公立大学工業高等専門学校 知能情報コース 2年<br>
+      Club 　　　: 学友会執行部 / 総合芸術部<br>
+      Others 　　: MikuIT / Klef-Project<br>
+    </p>
+  </div>
+  <h3>Skills</h3>
+  <h3>Works</h3>
+  <h3>Contact</h3>
 </body>
 </html>
