github pages enable

--- a/Index.HTML
+++ b/Index.HTML
@@ -14,7 +14,7 @@
     </div>
   </div>
   <h3>Profile</h3>
-  <div class="Profile">
+  <div class="profile">
     <p>github name: Matsuura699<br>
       handle name: Yunomi_pixel<br>
       School 　　: 大阪公立大学工業高等専門学校 知能情報コース 2年<br>
@@ -23,6 +23,9 @@
     </p>
   </div>
   <h3>Skills</h3>
+  <div class="skills">
+    <p>
+    </p>
   <h3>Works</h3>
   <h3>Contact</h3>
 </body>
