--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=DotGothic16&family=Press+Start+2P&display=swap" rel="stylesheet">
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -44,6 +49,7 @@
       <button id="others_skills_button">Others</button>
     </div>
     <div id="programming_skills">
+      <h6>Programming</h6>
       <div class="skills_image">
         <figure>
           <img class="skills" src="images/HTML.png" alt="HTML_icon">
@@ -86,6 +92,7 @@
         </div>
     </div>
     <div id="others_skills" style="display:none;">
+    <h6>Others</h6>
       <div class="skills_image">
         <figure>
           <img class="skills" src="images/edge2.jpg" alt="EDGE2_icon">
@@ -121,6 +128,7 @@
       <button id="others_works_button">Others</button>
     </div>
     <div id="programming_works">
+      <h6>Programming</h6>
       <div class="works_container">
         <div class="product">
         <h5>-Python RPG- ～魔術師リファクタの大迷宮～</h5>
@@ -140,8 +148,9 @@
       </div>
     </div>
     <div id="others_works" style="display:none;">
+      <h6>Others</h6>
       <div class="works_container">
-      <div class="product">
+        <div class="product">
           <h5>総合芸術部 作品展示</h5>
             <div class="product_image">
               <img class="works" src="images/works_o1_01.png" alt="works_art">
@@ -172,7 +181,7 @@
     </script>
   </section>
   <footer>
-    <h6>email: ry24121n(a)st.omu.ac.jp<br>※(a)を@に置き換えてください</h6>
+    <h7>email: ry24121n(a)st.omu.ac.jp<br>※(a)を@に置き換えてください</h7>
   <div class="SNS_container">
     <a href="https://x.com/Yunomi_pixel" >
       <img class="SNS" src="images/X.png" alt="X_icon">
