--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Matsuura699|Yunomi_pixel Portfolio</title>
+  <title>Yunomi_pixel Portfolio</title>
   <link rel="stylesheet" href="style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,7 +26,7 @@
     <div class="top">
       <img class="icon" src="images/my_icon_traced.png" alt="Yunomi_icon">
       <div class="name">
-        <h1>Matsuura699 / Yunomi_pixel</h1>
+        <h1>Yunomi_pixel</h1>
         <h2>Programming and Pixelart</h2>
       </div>
     </div>
@@ -34,8 +34,7 @@
   <section id ="profile">
     <h3>Profile</h3>
     <div class="profile">
-      <h4>github name: Matsuura699<br>
-        handle name: Yunomi_pixel<br>
+      <h4>name　　　 : Yunomi<br>
         School 　　: <a href="https://www.ct.omu.ac.jp/">大阪公立大学工業高等専門学校</a> 知能情報コース 2年<br>
         Club 　　　: <a href="https://osaka-sa.netlify.app/" >学友会執行部</a> / <a href="https://www.instagram.com/art_omuct/">総合芸術部</a><br>
         Others 　　: <a href="https://mikuit.net/" >MikuIT</a> / Klef-Project 所属<br>
