--- a/index.html
+++ b/index.html
@@ -145,6 +145,16 @@
         <p>総合課題実習にて、Web上で遊ぶことができるスナイパーゲームを製作中です。プログラムの一部を担当しています。</p>
         </div>
       </div>
+      <div class="works_container">
+        <div class="product">
+        <h5>役満麻雀</h5>
+          <div class="product_image">
+            <img class="works" src="images/works_p3_01.png" alt="works_art">
+          </div>
+        <p>Pythonを用いて、麻雀をモチーフにしたゲームを制作しました。<br>
+        githubのリポジトリには<a href="https://github.com/Yunomipixel699/Yaku-man_majang">こちら</a>からアクセス可能です。</p>
+        </div>
+      </div>
     </div>
     <div id="others_works" style="display:none;">
       <h6>Others</h6>
